# mustach

./: .gitignore  .gitlab-ci.yml  .keepalive  AUTHORS  CHANGELOG.md  LICENSE.txt  Makefile  README.md  README.meson  dotest.sh  meson.build  meson.options  mini-mustach.c  mini-mustach.h  mustach-cjson.c  mustach-cjson.h  mustach-helpers.c  mustach-helpers.h  mustach-jansson.c  mustach-jansson.h  mustach-json-c.c  mustach-json-c.h  mustach-tool.c  mustach-wrap.c  mustach-wrap.h  mustach.1.scd  mustach.c  mustach.h  mustach2.c  mustach2.h  mustachs.c  pkgcfgs  test-specs-cjson.ref  test-specs-jansson.ref  test-specs-json-c.ref  test-specs.c
.github/workflows/: docker-publish.yml  merge-upstream.yml
test-specs/: test-specs-jansson.ref  test-specs-json-c.ref  test-specs.c
test1/: json  must  resu.ref  vg.ref
test2/: Makefile  resu.ref  vg.ref
test3/: json  must  resu.ref  vg.ref
test4/: Makefile  json  must  resu.ref  vg.ref
test5/: Makefile  resu.ref  vg.ref
test6/: Makefile  test-custom-write  test-custom-write.c
test7/: Makefile  base.mustache  json  resu.ref
test8/: json  must  resu.ref  vg.ref
test9/: article.mustache
tests/: Makefile  dotest.sh
tests/test-specs/: test-specs-cjson.ref  test-specs-jansson.ref  test-specs.c
tests/test1/: must
tests/test6/: Makefile  test-custom-write.c
tests/test7/: node.mustache  vg.ref
tests/test8/: Makefile
tests/test9/: base.mustache  json  resu.ref  vg.ref
